--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="start_title">Sweep</string>
-    <string name="start_description">Scan venues around you</string>
+    <string name="start_description">The best venues on your radar.</string>
     <string name="start_cta">Lets search for venues!</string>
 
     <string name="search_placeholder">Search for venue…</string>
